--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python:
   - "3.5"
+install:
+  - pip install codecov
 script:
   - python3 tests.py
+  - coverage run tests.py
+  - codecov
